# Multithreaded-File-Text-Search

./: CMakeLists.txt  FileUtils.cpp  FileUtils.h  README.md  SearchManager.cpp  SearchManager.h  SearchWindow.cpp  SearchWindow.h  SearchWorker.cpp  SearchWorker.h  ThreadPool.cpp  ThreadPool.h  main.cpp
